feat: zoomable sunburst图中的文字被限制在图形内, 新增静态sunburst图

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,5 @@
 			"@/*": ["src/*"]
 		}
 	},
-	"include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "src/components/d3/Scrubber.ts"]
+	"include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
 }
